SET(PARALLEL_SOURCES mpi.cxx shift.cxx nth_element.cxx bisection.cxx let.cxx parallelrun.cxx unpartition.cxx ijparallelrun.cxx Nparallel.cxx skip_tree.cxx overlap_comm.cxx fdgl.cxx)
SET(SERIAL_SOURCES construct.cxx kernel.cxx ewald_direct.cxx ewald_fmm.cxx serialrun.cxx unsort.cxx ijserialrun.cxx Nserial.cxx)
SET(PARALLEL_GPU_SOURCES check_gpus.cxx)
SET(SERIAL_GPU_SOURCES direct_gpu.cxx stokesSerial.cxx)

IF(USE_VTK)
    SET(SERIAL_SOURCES ${SERIAL_SOURCES} vtk.cxx)
ENDIF()

IF(USE_MPI)
    FOREACH(test ${PARALLEL_SOURCES})
        GET_FILENAME_COMPONENT(TestName ${test} NAME_WE)
        ADD_EXECUTABLE(test_${TestName} ${test})
        TARGET_LINK_LIBRARIES(test_${TestName} ${OBJ_LIBS})
        IF(USE_QUARK)
            TARGET_LINK_LIBRARIES(test_${TestName} quark)
        ENDIF()
        TARGET_LINK_LIBRARIES(test_${TestName} Kernels)
        IF(USE_VTK)
            TARGET_LINK_LIBRARIES(test_${TestName} ${VTK_LIBS})
        ENDIF()
        TARGET_LINK_LIBRARIES(test_${TestName} mpi mpi_cxx )
        ADD_TEST(${TestName} ${MPIEXEC} -np 4 ${CMAKE_CURRENT_BINARY_DIR}/test_${TestName})
    ENDFOREACH()
    IF(USE_CUDA)
        FOREACH(test ${PARALLEL_GPU_SOURCES})
            GET_FILENAME_COMPONENT(TestName ${test} NAME_WE)
            ADD_EXECUTABLE(test_${TestName} ${test})
            TARGET_LINK_LIBRARIES(test_${TestName} ${OBJ_LIBS})
            IF(USE_QUARK)
                TARGET_LINK_LIBRARIES(test_${TestName} quark)
            ENDIF()
            TARGET_LINK_LIBRARIES(test_${TestName} Kernels)
            IF(USE_VTK)
                TARGET_LINK_LIBRARIES(test_${TestName} ${VTK_LIBS})
            ENDIF()
            TARGET_LINK_LIBRARIES(test_${TestName} mpi mpi_cxx )
            ADD_TEST(${TestName} ${MPIEXEC} -np 4 ${CMAKE_CURRENT_BINARY_DIR}/test_${TestName})
        ENDFOREACH()
    ENDIF()
ENDIF()

FOREACH(test ${SERIAL_SOURCES})
    GET_FILENAME_COMPONENT(TestName ${test} NAME_WE)
    ADD_EXECUTABLE(test_${TestName} ${test})
    TARGET_LINK_LIBRARIES(test_${TestName} ${OBJ_LIBS})
    IF(USE_QUARK)
        TARGET_LINK_LIBRARIES(test_${TestName} quark)
    ENDIF()
    TARGET_LINK_LIBRARIES(test_${TestName} Kernels)
    IF(USE_VTK)
        TARGET_LINK_LIBRARIES(test_${TestName} ${VTK_LIBS})
    ENDIF()
    ADD_TEST(${TestName} ${CMAKE_CURRENT_BINARY_DIR}/test_${TestName})
ENDFOREACH()

IF(USE_CUDA)
    FOREACH(test ${SERIAL_GPU_SOURCES})
        GET_FILENAME_COMPONENT(TestName ${test} NAME_WE)
        ADD_EXECUTABLE(test_${TestName} ${test})
        TARGET_LINK_LIBRARIES(test_${TestName} ${OBJ_LIBS})
        IF(USE_QUARK)
            TARGET_LINK_LIBRARIES(test_${TestName} quark)
        ENDIF()
        TARGET_LINK_LIBRARIES(test_${TestName} Kernels)
        IF(USE_VTK)
            TARGET_LINK_LIBRARIES(test_${TestName} ${VTK_LIBS})
        ENDIF()
        ADD_TEST(${TestName} ${CMAKE_CURRENT_BINARY_DIR}/test_${TestName})
    ENDFOREACH()
ENDIF()
